syntax = "proto3";
option java_multiple_files = true;
package ds.ticket;

message TicketRequest {
  string eventId = 1;
  string seatType = 2;
  bool includeAfterParty = 3;
}

message TicketResponse {
  bool success = 1;
  string message = 2;
}

service TicketService {
  rpc ReserveTickets(TicketRequest) returns (TicketResponse);
}
